--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,10 +5,34 @@
 	transform: translate(-50%,-50%);
 }
 
+
+ /*dashboard*/
+ .dashboard{  
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  padding: 0;
+  background: url("../assets/image/dashboardbg.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-size: cover;
+ }
+
+  /*<link href="{{ asset('https://fonts.googleapis.com/css?family=Open+Sans+Condensed:700&display=swap') }}" rel="stylesheet">*/
+ .center h1 {
+  font-family: 'Open Sans Condensed';
+  font-size: 5.5rem;
+  line-height: 2.5rem;
+  color: #cacfe3;
+}
+
+
  /*content with sidebar*/
 .sidecontent{
   margin-left: 250px;
 }
+
 
  /*sidebar*/
 .fixed-left{
