--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,14 +9,22 @@
  /*dashboard*/
  .dashboard{  
   position: relative;
+  margin-top: 56px;
   width: 100%;
   height: 100vh;
-  padding: 0;
+  padding: 20px;
   background: url("../assets/image/dashboardbg.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-size: cover;
+ }
+
+ .nounderline {
+  text-decoration: none !important;}
+
+   #micon{
+  font-size: 24px;
  }
 
   /*<link href="{{ asset('https://fonts.googleapis.com/css?family=Open+Sans+Condensed:700&display=swap') }}" rel="stylesheet">*/
@@ -32,6 +40,10 @@
 .sidecontent{
   margin-left: 250px;
 }
+
+.img-table{width: 30px; height: 30px; object-fit: cover; object-position: center;}
+
+.img-edit{width: 150px; height: 150px; object-fit: cover; object-position: center;}
 
 
  /*sidebar*/
